--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodeInterview Pro - AI-Powered Technical Interviews</title>
-    <meta name="description" content="Streamline your technical recruitment with AI-powered coding interviews and real-time collaboration" />
-    <meta name="author" content="CodeInterview Pro" />
-
-    <meta property="og:title" content="CodeInterview Pro - AI-Powered Technical Interviews" />
-    <meta property="og:description" content="Streamline your technical recruitment with AI-powered coding interviews and real-time collaboration" />
+    <title>CodeSignal - AI-Powered Technical Interviews</title>
+    <meta name="description" content="AI-powered technical interview platform for engineering teams" />
+    <meta name="author" content="CodeSignal" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <meta property="og:title" content="CodeSignal - AI-Powered Technical Interviews" />
+    <meta property="og:description" content="AI-powered technical interview platform for engineering teams" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://codesignal.com" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@codeinterview_pro" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@codesignal" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
